 * A new lockconfdir option has been added to asterisk.conf to protect the
   configuration directory (/etc/asterisk by default) during reloads.
 * The parkeddynamic option has been added to features.conf to enable the creation
   of dynamic parkinglots.
 * chan_dahdi now supports reporting alarms over AMI either by channel or span via
   the reportalarms config option.
 * The Realtime dialplan switch now caches entries for 1 second.  This provides a
   significant increase in performance (about 3X) for installations using this switchtype.

CLI Changes
-----------
 * The 'core set debug' and 'core set verbose' commands, in previous versions, could
   optionally accept a filename, to apply the setting only to the code generated from
   that source file when Asterisk was built. However, there are some modules in Asterisk
   that are composed of multiple source files, so this did not result in the behavior
   that users expected. In this version, 'core set debug' and 'core set verbose'
   can optionally accept *module* names instead (with or without the .so extension),
   which applies the setting to the entire module specified, regardless of which source
   files it was built from.
 * New 'manager show settings' command showing the current settings loaded from
   manager.conf. 
 * Added 'all' keyword to the CLI command "channel request hangup" so that you can send
   the channel hangup request to all channels.

------------------------------------------------------------------------------
--- Functionality changes from Asterisk 1.6.1 to Asterisk 1.6.2  -------------
------------------------------------------------------------------------------

SIP Changes
-----------
 * Added support for SUBSCRIBE/NOTIFY with dialog-info based call pickups.
   Snom phones use this for call pickup of extensions that the phone is
   subscribed to.
 * Added support for setting the domain in the URI for caller of an
   outbound call by using the SIPFROMDOMAIN channel variable.